# cloudevents-python

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
src/cloudevents_python/: sample_server.py  with_kafka.py  with_requests.py
tests/: test_cloudevents_python.py
